[package]
name = "hana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.53.0"
glam = "0.24.2"
duang = "0.1.2"
russimp = "2.0.6"
noise = "0.8.2"
atomic = "0.6.0"
rapier3d = "0.17.2"
rand = "0.7.3"